# Pacman-killer

./: .gitignore  README.md  packiller.md
Main/header/: Main.h
main/: CMakeLists.txt
main/button/: class_button.cpp  class_button.h  main_window.cpp
main/head/: Bonus.h  Bot.h  Bot.h.bak  Character.h  Constants.h  Constants.h.bak  GameState.h  Map.h  Map.h.bak  Player.h  Player.h.bak  PlayerController.h  PlayerController.h.bak  Scale.h  Textures.h  authors.h  class_button.h  class_window.h  class_window.h.bak  main.h  options.h
main/src/: Bot.cpp  Bot.cpp.bak  Character.cpp  Map.cpp  Map.cpp.bak  Player.cpp  Player.cpp.bak  PlayerController.cpp  PlayerController.cpp.bak  Scale.cpp  class_button.cpp  main.cpp  main.cpp.bak  main_window.cpp  window.cpp  window.cpp.bak
